  - Made the United Kingdom focus "Towards The Right" remove the "Part of the 1st World" idea
  - Added an influence requirement to launch the coalition of the willing attack on Iran
  - Rebalanced Turkey's army anger modifiers
  - Reduced the amount of reparations paid; down from 10% of GDP/PP to 3%
  - Rebalanced modifiers from Iran's prime minister decisions
  - Made the Coaxial Engines for Helicopters jump by 5 KM/H per generation
  - Removed the piercing value from the Modern Smoothbore ATGM and better laid out the ATGM hard attack by increments of 4

 Bugfix:
  - Fixed the Weaken Libya and Weaken Venezuela modifiers not properly weakening the countries
  - Fixed having no scrollbar in special project window
  - Fixed having no priority buttons for equipment in Production Tab
  - Fixed requiring 7 Billion of Total GDP instead of 7 Trillion for Chinese Economic Focus "Focus On Strategic Industries"
  - Fixed reducing domestic independence for Russian Economic Focus "Chaika"
  - Fixed swapped rewards from Improved Wireless Communication special project
  - Fixed Chechnya becoming a puppet if you successfully white peace with Russia
  - Fixed Chechnya having Ramzan Kadyrov instead of his father for 1 day until focus "Ahmat Kadyrov"
  - Fixed the Nigerian event "Nigeria Seeks Foreign Grants" not properly giving influence to the country that grants the money
  - Fixed the Brazilian focus "Integrate UNASUL" not properly adding the UNASUL faction to the country that completes the focus
  - Fixed the Destroyers for non-MTG owners being unable to deploy
  - Fixed the Iraqi focus "Russian Investments" display not giving the proper influence
  - Fixed a bug where Eastern European countries could apply to the F-35 program without being in NATO or a Major Non-NATO Ally
  - Fixed a bug where Hezbollah gets annexed by Israel if it wins the 2006 war
  - Fixed a bug where the portrait of an Iranian Prime Minister was not displayed properly in the GUI