@@ -364,17 +364,17 @@ PER_Iranian_president_info = {
 		}
 
 		modifier = {
-			political_power_cost = 1
+			political_power_cost = 0.50
 			production_speed_buildings_factor = 0.10
 		}
 
 		complete_effect = {
-			add_offsite_building = { type = industrial_complex level = 1 }
+			add_offsite_building = { type = industrial_complex level = 3 }
 		}
 
 		remove_effect = {
 			log = "[GetDateText]: [Root.GetName]: Decision PER_the_new_phase_of_economic_plans"
-			add_offsite_building = { type = industrial_complex level = -1 }
+			add_offsite_building = { type = industrial_complex level = -3 }
 		}
 
 		ai_will_do = {
@@ -405,7 +405,9 @@ PER_Iranian_president_info = {
 
 		modifier = {
 			political_power_cost = 0.5
-			social_cost_multiplier_modifier = 0.10
+			population_tax_income_multiplier_modifier = -0.05
+			production_speed_infrastructure_factor = 0.20
+			production_speed_internet_station_factor = 0.15
 		}
 
 		remove_effect = {
@@ -442,8 +444,11 @@ PER_Iranian_president_info = {
 		}
 
 		modifier = {
-			political_power_cost = 1
+			political_power_cost = 0.25
 			opinion_gain_monthly_factor = 0.10
+			foreign_influence_defense_modifier = 0.05
+			army_attack_factor = 0.05
+			army_morale = 5.00
 		}
 
 		remove_effect = {
@@ -454,6 +459,7 @@ PER_Iranian_president_info = {
 					modifier = medium_increase
 				}
 			}
+			newline = yes
 			CHI = {
 				add_opinion_modifier = {
 					target = PER
@@ -489,9 +495,10 @@ PER_Iranian_president_info = {
 		}
 
 		modifier = {
-			political_power_cost = 1.3
 			police_cost_multiplier_modifier = 0.10
 			stability_weekly = 0.001
+			foreign_influence_defense_modifier = 0.20
+			foreign_influence_home_continent_modifier = 0.15
 		}
 
 		remove_effect = {
@@ -527,12 +534,17 @@ PER_Iranian_president_info = {
 		}
 
 		modifier = {
-			political_power_cost = 0.7
+			political_power_cost = 0.5
+			research_speed_factor = 0.15
 			communism_drift = 0.2
 		}
 
 		remove_effect = {
-			log = "[GetDateText]: [Root.GetName]: Decision PER_send_diplomats_to_the_east"
+			log = "[GetDateText]: [Root.GetName]: Decision PER_showcase_our_efforts"
+			add_power_balance_value = {
+				id = PER_clergy_balance_of_power_category
+				value = 0.10
+			}
 		}
 
 		ai_will_do = {
@@ -571,7 +583,18 @@ PER_Iranian_president_info = {
 		}
 
 		remove_effect = {
-			log = "[GetDateText]: [Root.GetName]: Decision PER_send_diplomats_to_the_east"
+			log = "[GetDateText]: [Root.GetName]: Decision PER_develop_the_military_industry"
+			random_list = {
+				50 = {
+					one_random_arms_factory = yes
+				}
+				25 = {
+					one_random_dockyard = yes
+				}
+				25 = {
+					# Nothing
+				}
+			}
 		}
 
 		ai_will_do = {
@@ -602,16 +625,29 @@ PER_Iranian_president_info = {
 		}
 
 		modifier = {
-			political_power_cost = 1
+			political_power_cost = 0.5
 			production_factory_max_efficiency_factor = 0.05
 			production_factory_efficiency_gain_factor = 0.05
 			receiving_investment_cost_modifier = -0.10
 			investment_cost_modifier = -0.05
 			tax_gain_multiplier_modifier = 0.05
+			offices_productivity = 0.1
+			production_factory_start_efficiency_factor = 0.10
 		}
 
 		remove_effect = {
 			log = "[GetDateText]: [Root.GetName]: Decision PER_new_phase_of_economic_plans_reformists"
+			random_list = {
+				50 = {
+					one_random_industrial_complex = yes
+				}
+				25 = {
+					one_office_construction = yes
+				}
+				25 = {
+					# Nothing
+				}
+			}
 		}
 
 		ai_will_do = {
@@ -641,14 +677,17 @@ PER_Iranian_president_info = {
 		}
 
 		modifier = {
-			political_power_cost = 1.5
+			political_power_cost = 0.5
+			police_cost_multiplier_modifier = -0.15
+			productivity_growth_modifier = 1
 		}
 
 		remove_effect = {
 			log = "[GetDateText]: [Root.GetName]: Decision PER_support_the_reform_plans_in_the_parliament"
-			add_political_power = 50
+			add_political_power = 150
+			newline = yes
 			set_temp_variable = { party_index = 8 }
-			set_temp_variable = { party_popularity_increase = 0.02 }
+			set_temp_variable = { party_popularity_increase = 0.05 }
 			add_relative_party_popularity = yes
 		}
 
@@ -681,6 +720,7 @@ PER_Iranian_president_info = {
 		modifier = {
 			political_power_cost = 1
 			opinion_gain_monthly_factor = 0.10
+			trade_opinion_factor = 0.75
 		}
 
 		remove_effect = {
@@ -689,6 +729,54 @@ PER_Iranian_president_info = {
 				add_opinion_modifier = {
 					target = PER
 					modifier = small_increase
+				}
+			}
+			if = {
+				limit = {
+					USA = {
+						has_opinion_modifier = beirut_bombing
+					}
+				}
+				USA = {
+					remove_opinion_modifier = {
+						target = PER
+						modifier = beirut_bombing
+					}
+				}
+			}
+			else_if = {
+				limit = {
+					USA = {
+						has_opinion_modifier = iran_hostage_crisis
+					}
+				}
+				USA = {
+					remove_opinion_modifier = {
+						target = PER
+						modifier = iran_hostage_crisis
+					}
+				}
+			}
+			else_if = {
+				limit = {
+					PER = {
+						has_completed_focus = PER_the_grand_bargain
+					}
+					USA = {
+						has_opinion_modifier = no_diplomatic_ties
+					}
+				}
+				USA = {
+					remove_opinion_modifier = {
+						target = PER
+						modifier = no_diplomatic_ties
+					}
+				}
+				PER = {
+					remove_opinion_modifier = {
+						target = USA
+						modifier = no_diplomatic_ties
+					}
 				}
 			}
 			GER = {
@@ -734,6 +822,8 @@ PER_Iranian_president_info = {
 		modifier = {
 			political_power_cost = 0.5
 			police_cost_multiplier_modifier = -0.10
+			research_speed_factor = 0.10
+			education_cost_multiplier_modifier = -0.10
 		}
 
 		remove_effect = {
@@ -771,9 +861,9 @@ PER_Iranian_president_info = {
 		}
 
 		modifier = {
-			political_power_cost = 1.2
-			tax_gain_multiplier_modifier = 0.03
-			population_tax_income_multiplier_modifier = 0.05
+			political_power_cost = 0.5
+			tax_gain_multiplier_modifier = 0.05
+			population_tax_income_multiplier_modifier = 0.1
 			econ_cycle_upg_cost_multiplier_modifier = -0.15
 		}
 
@@ -811,13 +901,13 @@ PER_Iranian_president_info = {
 		}
 
 		modifier = {
-			political_power_cost = 1.3
-			production_speed_industrial_complex_factor = 0.10
+			political_power_cost = 0.5
+			production_speed_industrial_complex_factor = 0.35
 			conversion_cost_mil_to_civ_factor = -0.20
 		}
 
 		remove_effect = {
-			log = "[GetDateText]: [Root.GetName]: Decision PER_support_the_reform_plans_in_the_parliament"
+			log = "[GetDateText]: [Root.GetName]: Decision PER_factory_conversation"
 		}
 
 		ai_will_do = {
@@ -7228,10 +7318,6 @@ PER_new_majlis = {
 				tooltip = PER_interest_TT
 				check_variable = { interest_rate < 2.000 }
 			}
-			custom_trigger_tooltip = {
-				tooltip = PER_debt_500_TT
-				check_variable = { debt < 500 }
-			}
 		}
 		days_mission_timeout = 500
 		is_good = no
@@ -8288,8 +8374,8 @@ PER_new_majlis = {
 		available = {
 			custom_trigger_tooltip = {
 				tooltip = PER_tax_haven_TT
-				check_variable = { population_tax_rate < 11 }
-				check_variable = { corporate_tax_rate < 11 }
+				check_variable = { population_tax_rate < 26 }
+				check_variable = { corporate_tax_rate < 26 }
 			}
 		}
 		days_mission_timeout = 500
@@ -9464,7 +9550,7 @@ PER_new_majlis = {
 			has_idea = economic_boom
 			custom_trigger_tooltip = {
 				tooltip = PER_debt_500_TT
-				check_variable = { debt < 500 }
+				check_variable = { debt < 999 }
 			}
 		}
 		days_mission_timeout = 500
@@ -9998,10 +10084,6 @@ PER_new_majlis = {
 			custom_trigger_tooltip = {
 				tooltip = PER_interest_TT
 				check_variable = { interest_rate < 2.000 }
-			}
-			custom_trigger_tooltip = {
-				tooltip = PER_debt_500_TT
-				check_variable = { debt < 500 }
 			}
 		}
 		days_mission_timeout = 500
