@@ -534,7 +534,18 @@ focus_tree = {
 						days = 1
 					}
 				}
+				newline = yes
 				custom_effect_tooltip = PER_nuclear_negotiations_TT
+			}
+			if = {
+				limit = {
+					OR = {
+						emerging_hardline_shiite_are_in_power = yes
+						emerging_moderate_shiite_are_in_power = yes
+					}
+				}
+				newline = yes
+				custom_effect_tooltip = PER_reformist_better_TT
 			}
 			set_country_flag = PER_nuclear_negotiations
 		}
