@@ -2936,7 +2936,7 @@
  nuclear_iran.13.a: "Negotiate for Monetary Benefits"
  nuclear_iran.13.b: "Negotiate for Industrial Benefits"
  nuclear_iran.13.c: "Negotiate for Energy Benefits"
- nuclear_iran.14.t: "Iran Reveals It's Nuclear Program"
+ nuclear_iran.14.t: "Iran Reveals Its Nuclear Program"
  nuclear_iran.14.d: "The Iranian government has come forth with documents, photos, and other evidence proving that they currently possess the capability to produce nuclear weapons, if they don't already have them at hand. Our administration is quite perplexed by this move, as the world has speculated that the Iranians have been trying to produce nuclear weapons for some time now, with claims of this being denied by Iran. However it is suspected that Iran is doing this as a way to blackmail us and the rest of the world into giving them benefits that we otherwise would not grant them. Regardless, we will need to lift sanctions on them, and whether we do it on our own terms or theirs will still need to be decided."
  nuclear_iran.14.a: "Fine, what do they want?"
  nuclear_iran.14.b: "We will stand firm, they must dismantle all nuclear capabilities!"
@@ -2992,6 +2992,7 @@
  nuclear_iran.29.a: "A great day"
 
  # New Tooltips
+ PER_reformist_better_TT: "If we have a £PER_Mod_Vilayat_e_Faqih  §HReformist President§! we will be able to remove the §HNo Diplomatic Ties§! modifier with the §H[USA.GetFlag] United States§!\n - This will be available as an Iranian presidential decision in the §HSend Diplomats to the West§! decision\n - If relations are high enough, they may be compelled to lift all sanctions rather than just ease them"
  PER_ban_khatami_TT: "§HKhatami§! & §HRafsanjani§! will be banned from politics"
  PER_play_as_IR_TT: "Will play as the Islamic Republic!\n - §HQassem Soleimani§! will be the country leader\n - £PER_Vilayat_e_Faqih  §H(FoP) Followers of Principle§! will be the ruling party\n - The Islamic Republic paths will be made available"
  PER_play_as_IR2_TT: "Will play as the Islamic Republic!\n - §HMohammad-Javad Bavand§!, a living §PSassanid§! descendant will be the country leader\n - £PER_Vilayat_e_Faqih  §H(FoP) Followers of Principle§! will be the ruling party\n - The Islamic Republic paths will be made available"
@@ -3229,7 +3230,7 @@
  PER_corpt_tax_TT: "§HCorporate Taxes§! are at §H5%§! or less"
  PER_battery_park_TT: "Has at least §H5 Battery Parks§!"
  PER_investments_500_TT: "Has at least §H$500B§! in §HInternational Investments§!"
- PER_tax_haven_TT: "Taxes are at §H10%§! or less for both §HCorporations§! and §HPopulation§!"
+ PER_tax_haven_TT: "Taxes are at §H25%§! or less for both §HCorporations§! and §HPopulation§!"
  PER_iraq_accepted_to_pay_half_billion_weekly: "[IRQ.GetFlag] [IRQ.GetName] is Paying §H0.5Billion§! Weekly"
  PER_iraq_accepted_to_pay_one_billion_weekly: "[IRQ.GetFlag] [IRQ.GetName] is Paying a §H1 Billion§! Weekly"
  PER_iraq_accepted_to_pay_two_billion_weekly: "[IRQ.GetFlag] [IRQ.GetName] is Paying §H2 Billion§! Weekly"
@@ -3240,7 +3241,7 @@
  PER_kermanshah_TT: "Has §H1 Supply Hub§! in §HKermanshah City§!"
  PER_generate_electricity_TT: "We need to generate §H80 GW§! or more of §HElectricity§!"
  PER_interest_TT: "Interest rate is less than §H2%§!"
- PER_debt_500_TT: "Debt is less than §H$500.00B§!"
+ PER_debt_500_TT: "Debt is less than §H$1 Trillion§!"
  PER_need_productivity_700_TT: "We need at least §H650 Overall Productivity§!"
  PER_domestic_independence_TT: "We have at least §H85%§! domestic independence"
  PER_border_closed_TT: "All provinces bordering a neighbor in §HSistan O Balochistan§! has level §H3 Forts§!"
@@ -3383,7 +3384,7 @@
  PER_change_party_name_TT: "We will form the §H(NRP) National Resilience Party§!"
  PER_can_negotiate_again_TT: "We can begin negotiations again"
  PER_no_more_nukes_TT: "We will §Hempty§! our stockpiles of §HICBM's§!\n\n§RWe will not be able to ever use nuclear weapons if we comply after this point!§!"
- PER_nuclear_negotiations_TT: "§HWe should have atleast +5 Relations with the U.S.A. to get a favorable response!§!\n§RIf the U.S.A. has a Republican President, we may get a less than favorable response!§!"
+ PER_nuclear_negotiations_TT: "We should have atleast §H+5 Relations§! with the \n§H[USA.GetFlag] United States§! to get a favorable response!\n - If the [USA.GetFlag] §HUnited States§! has a §HRepublican president§!, we may get a less than favorable response"
  PER_steal_russ_TT: "Enables §YSteal Russian ICBM's§! mission.\n(Requires §YArmy Infiltration§!)"
  PER_missile_nko_TT: "Iran will upgrade their §HICBM§! Technology"
  PER_missile_sov_TT: "Iran will upgrade their §HNuclear Reactor§! Technology"
