@@ -18,6 +18,7 @@ v1.12.0c
   - Rebalanced Turkey's army anger modifiers
   - Reduced the amount of reparations paid; down from 10% of GDP/PP to 3%
   - Rebalanced modifiers from Iran's prime minister decisions
+  - Rebalanced modifiers from Iran's presidential decisions
   - Made the Coaxial Engines for Helicopters jump by 5 KM/H per generation
   - Removed the piercing value from the Modern Smoothbore ATGM and better laid out the ATGM hard attack by increments of 4
 
@@ -49,6 +50,7 @@ v1.12.0c
   - Tabled Iran's MEK mechanic
   - Added an event for the end of the Nigerian "Religious Civil War Mission" if you are able to successfully convert everything without the Islamic civil war triggering
   - Added 8 new American leaders to extend presidential cycles for another 16 years (4 DEM, 4 REP)
+  - Added an option to mend ties with the United States as I.R. Iran
 
  Database:
   - Added the starting spirit of "Nuclear Energy" to Iran
